# yaml2env

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  test.yaml
.github/: CODEOWNERS
.github/scripts/: cleanup-workflows.sh
.github/workflows/: ci.yml  cross-compile.yml  release-pr-merge.yml  release-pr.yml  rust.yml
src/: lib.rs  main.rs
tests/: cli.rs
