[package]
name = "yaml2env"
version = "0.1.0"
authors = ["vikin91 <vikin91@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
env_logger = "0.8.2"
yaml-rust = "0.4.4"
clap = "3.0.0-beta.2"
simple-error = "0.2.2"
predicates = "1"

[dev-dependencies]
indoc = "1.0"
assert_cmd = "1.0.2"
assert_fs = "1.0.0"
