[package]
name = "yaml2env"
version = "0.1.0"
authors = ["vikin91 <vikin91@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
env_logger = "0.9.0"
yaml-rust = "0.4.5"
clap = { version = "3.1.6", features = ["derive"] }
simple-error = "0.2.3"
predicates = "1.0.8"

[dev-dependencies]
indoc = "1.0"
assert_cmd = "1.0.2"
assert_fs = "1.0.0"
